Fix object adder text being squished

--- a/src/levelEditor/sidebar/SidebarObjectAdder.module.css
+++ b/src/levelEditor/sidebar/SidebarObjectAdder.module.css
@@ -4,8 +4,16 @@
 	padding: 8px;
 }
 
+.label {
+	flex-shrink: 0;
+}
+
 .select {
 	flex-grow: 1;
 	margin-right: 8px;
 	padding: 0 0 0 8px;
+}
+
+.button {
+	flex-shrink: 0;
 }
